--- a/index.html
+++ b/index.html
@@ -3,25 +3,14 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
-    <!--Material Design Lite -->
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-    <!-- Custom Styles -->
-    <link rel=stylesheet" href="styles/main.css">
   </head>
   <body>
-    <header class="mdl-layout__header mdl-layout__header--transparent">
-      <h1>To-Do App</h1>
+    <h1>To-Do App</h1>
 
     <form id="addToDoForm">
       <label for="newToDoText">New To-Do:</label>
-      <div class="mdl-textfield mdl-js-textfield">
-        <input class="mdl-textfield__input" type="text" id="sample1">
-        <label class="mdl-textfield__label" for="sample1">Text...</label>
-      </div>
-      <!-- Raised button -->
-      <button class="mdl-button mdl-js-button mdl-button--raised">Add To-Do!</button>
+      <input type="text" id="newToDoText">
+      <button type="submit">Add To-Do!</button>
     </form>
 
     <ul id="toDoList">
